tests/ui/end-after-operator.rs
use efg::efg;

#[efg(unix ||)]
struct S;

#[efg((unix ||) && window)]
struct S;

fn main() {}
